--- a/articles.bib
+++ b/articles.bib
@@ -656,25 +656,6 @@
   file = {/Users/mavi/Zotero/storage/KFS9XXJV/Chen et al. - 2021 - TransUNet Transformers Make Strong Encoders for M.pdf}
 }
 
-@article{comaniciuMeanShiftRobust2002a,
-  title = {Mean Shift: A Robust Approach toward Feature Space Analysis},
-  shorttitle = {Mean Shift},
-  author = {Comaniciu, D. and Meer, P.},
-  date = {2002-05},
-  journaltitle = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-  shortjournal = {IEEE Trans. Pattern Anal. Machine Intell.},
-  volume = {24},
-  number = {5},
-  pages = {603--619},
-  issn = {01628828},
-  doi = {10.1109/34.1000236},
-  url = {http://ieeexplore.ieee.org/document/1000236/},
-  urldate = {2023-12-12},
-  abstract = {ÐA general nonparametric technique is proposed for the analysis of a complex multimodal feature space and to delineate arbitrarily shaped clusters in it. The basic computational module of the technique is an old pattern recognition procedure, the mean shift. We prove for discrete data the convergence of a recursive mean shift procedure to the nearest stationary point of the underlying density function and, thus, its utility in detecting the modes of the density. The relation of the mean shift procedure to the NadarayaWatson estimator from kernel regression and the robust M-estimators of location is also established. Algorithms for two low-level vision tasks, discontinuity preserving smoothing and image segmentation, are described as applications. In these algorithms, the only user set parameter is the resolution of the analysis and either gray level or color images are accepted as input. Extensive experimental results illustrate their excellent performance.},
-  langid = {english},
-  file = {/Users/mavi/Zotero/storage/XFZPZVEW/PAMIMeanshift.pdf}
-}
-
 @article{cooperClimateChangeinducedVariations2022,
   title = {Climate Change-Induced Variations in Blue and Green Water Usage in {{U}}.{{S}}. Urban Agriculture},
   author = {Cooper, Carolyn M. and Troutman, Jacob P. and Awal, Ripendra and Habibi, Hamideh and Fares, Ali},
@@ -734,25 +715,6 @@
   abstract = {Panoptic segmentation combines instance and semantic predictions, allowing the detection of countable objects and different backgrounds simultaneously. Effectively approaching panoptic segmentation in remotely sensed data is very promising since it provides a complete classification, especially in areas with many elements as the urban setting. However, some difficulties have prevented the growth of this task: (a) it is very laborious to label large images with many classes, (b) there is no software for generating DL samples in the panoptic segmentation format, (c) remote sensing images are often very large requiring methods for selecting and generating samples, and (d) most available software is not friendly to remote sensing data formats (e.g., TIFF). Thus, this study aims to increase the operability of panoptic segmentation in remote sensing by providing: (1) a pipeline for generating panoptic segmentation datasets, (2) software to create deep learning samples in the Common Objects in Context (COCO) annotation format automatically, (3) a novel dataset, (4) leverage the Detectron2 software for compatibility with remote sensing data, and (5) evaluate this task on the urban setting. The proposed pipeline considers three inputs (original image, semantic image, and panoptic image), and our software uses these inputs alongside point shapefiles to automatically generate samples in the COCO annotation format. We generated 3400 samples with 512 × 512 pixel dimensions and evaluated the dataset using Panoptic-FPN. Besides, the metric analysis considered semantic, instance, and panoptic metrics, obtaining 93.865 mean intersection over union (mIoU), 47.691 Average (AP) Precision, and 64.979 Panoptic Quality (PQ). Our study presents the first effective pipeline for generating panoptic segmentation data for remote sensing targets.},
   langid = {english},
   file = {/Users/mavi/Zotero/storage/IH8VAPT4/de Carvalho et al. - 2022 - Panoptic Segmentation Meets Remote Sensing.pdf}
-}
-
-@article{delmasAdaptationPlantPathogen2016,
-  title = {Adaptation of a Plant Pathogen to Partial Host Resistance: Selection for Greater Aggressiveness in Grapevine Downy Mildew},
-  shorttitle = {Adaptation of a Plant Pathogen to Partial Host Resistance},
-  author = {Delmas, Chloé E. L. and Fabre, Frédéric and Jolivet, Jérôme and Mazet, Isabelle D. and Richart Cervera, Sylvie and Delière, Laurent and Delmotte, François},
-  date = {2016},
-  journaltitle = {Evolutionary Applications},
-  volume = {9},
-  number = {5},
-  pages = {709--725},
-  issn = {1752-4571},
-  doi = {10.1111/eva.12368},
-  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/eva.12368},
-  urldate = {2023-12-06},
-  abstract = {An understanding of the evolution of pathogen quantitative traits in response to host selective pressures is essential for the development of durable management strategies for resistant crops. However, we still lack experimental data on the effects of partial host resistance on multiple phenotypic traits (aggressiveness) and evolutionary strategies in pathogens. We performed a cross-inoculation experiment with four grapevine hosts and 103 isolates of grapevine downy mildew (Plasmopara viticola) sampled from susceptible and partially resistant grapevine varieties. We analysed the neutral and adaptive genetic differentiation of five quantitative traits relating to pathogen transmission. Isolates from resistant hosts were more aggressive than isolates from susceptible hosts, as they had a shorter latency period and higher levels of spore production. This pattern of adaptation contrasted with the lack of neutral genetic differentiation, providing evidence for directional selection. No specificity for a particular host variety was detected. Adapted isolates had traits that were advantageous on all resistant varieties. There was no fitness cost associated with this genetic adaptation, but several trade-offs between pathogen traits were observed. These results should improve the accuracy of prediction of fitness trajectories for this biotrophic pathogen, an essential element for the modelling of durable deployment strategies for resistant varieties.},
-  langid = {english},
-  keywords = {erosion,evolvability,fitness cost,host specificity,obligate plant pathogen,quantitative resistance,virulence,Vitis vinifera},
-  file = {/Users/mavi/Zotero/storage/DZJUG89F/Delmas et al_2016_Adaptation of a plant pathogen to partial host resistance.pdf;/Users/mavi/Zotero/storage/XZ87XCJ3/eva.html}
 }
 
 @article{delplaceRobustnessPlantQuantitative2020,
@@ -845,24 +807,6 @@
   langid = {english},
   keywords = {read},
   file = {/Users/mavi/Zotero/storage/XYYHNYGR/Douarre et al. - 2019 - Novel data augmentation strategies to boost superv.pdf}
-}
-
-@article{dudaUseHoughTransformation1972,
-  title = {Use of the {{Hough}} Transformation to Detect Lines and Curves in Pictures},
-  author = {Duda, Richard O. and Hart, Peter E.},
-  date = {1972-01},
-  journaltitle = {Communications of the ACM},
-  shortjournal = {Commun. ACM},
-  volume = {15},
-  number = {1},
-  pages = {11--15},
-  issn = {0001-0782, 1557-7317},
-  doi = {10.1145/361237.361242},
-  url = {https://dl.acm.org/doi/10.1145/361237.361242},
-  urldate = {2023-12-12},
-  abstract = {Hough has proposed an interesting and computationally efficient procedure for detecting lines in pictures. This paper points out that the use of angle-radius rather than slope-intercept parameters simplifies the computation further. It also shows how the method can be used for more general curve fitting, and gives alternative interpretations that explain the source of its efficiency.},
-  langid = {english},
-  file = {/Users/mavi/Zotero/storage/5D84PTGC/Duda_Hart_1972_Use of the Hough transformation to detect lines and curves in pictures.pdf}
 }
 
 @online{dupontLearningDisentangledJoint2018,
@@ -3475,7 +3419,7 @@
   url = {https://doi.org/10.1186/s13007-020-00647-9},
   urldate = {2023-07-21},
   abstract = {Monitoring the timing of seedling emergence and early development via high-throughput phenotyping with computer vision is a challenging topic of high interest in plant science. While most studies focus on the measurements of leaf area index or detection of specific events such as emergence, little attention has been put on the identification of kinetics of events of early seedling development on a seed to seed basis.},
-  keywords = {\_tablet,Deep learning,Kinetic,Seedling development},
+  keywords = {Deep learning,Kinetic,Seedling development},
   file = {/Users/mavi/Zotero/storage/WGC8MZEE/Samiei et al_2020_Deep learning-based detection of seedling development.pdf;/Users/mavi/Zotero/storage/J7LSPYD4/s13007-020-00647-9.html}
 }
 
