--- a/articles.bib
+++ b/articles.bib
@@ -426,6 +426,27 @@
   file = {/Users/mavi/Zotero/storage/GDZAUQJU/Burgess et al. - 2018 - Understanding disentangling in $beta$-VAE.pdf;/Users/mavi/Zotero/storage/3WKFUS5A/1804.html}
 }
 
+@article{buslaevAlbumentationsFastFlexible2020,
+  title = {Albumentations: {{Fast}} and {{Flexible Image Augmentations}}},
+  shorttitle = {Albumentations},
+  author = {Buslaev, Alexander and Iglovikov, Vladimir I. and Khvedchenya, Eugene and Parinov, Alex and Druzhinin, Mikhail and Kalinin, Alexandr A.},
+  date = {2020-02},
+  journaltitle = {Information},
+  volume = {11},
+  number = {2},
+  pages = {125},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  issn = {2078-2489},
+  doi = {10.3390/info11020125},
+  url = {https://www.mdpi.com/2078-2489/11/2/125},
+  urldate = {2023-12-12},
+  abstract = {Data augmentation is a commonly used technique for increasing both the size and the diversity of labeled training sets by leveraging input transformations that preserve corresponding output labels. In computer vision, image augmentations have become a common implicit regularization technique to combat overfitting in deep learning models and are ubiquitously used to improve performance. While most deep learning frameworks implement basic image transformations, the list is typically limited to some variations of flipping, rotating, scaling, and cropping. Moreover, image processing speed varies in existing image augmentation libraries. We present Albumentations, a fast and flexible open source library for image augmentation with many various image transform operations available that is also an easy-to-use wrapper around other augmentation libraries. We discuss the design principles that drove the implementation of Albumentations and give an overview of the key features and distinct capabilities. Finally, we provide examples of image augmentations for different computer vision tasks and demonstrate that Albumentations is faster than other commonly used image augmentation tools on most image transform operations.},
+  issue = {2},
+  langid = {english},
+  keywords = {computer vision,data augmentation,deep learning},
+  file = {/Users/mavi/Zotero/storage/HJFEND2C/Buslaev et al_2020_Albumentations.pdf}
+}
+
 @online{caiCascadeRCNNHigh2019,
   title = {Cascade {{R-CNN}}: {{High Quality Object Detection}} and {{Instance Segmentation}}},
   shorttitle = {Cascade {{R-CNN}}},
@@ -672,7 +693,7 @@
   urldate = {2023-12-12},
   abstract = {ÐA general nonparametric technique is proposed for the analysis of a complex multimodal feature space and to delineate arbitrarily shaped clusters in it. The basic computational module of the technique is an old pattern recognition procedure, the mean shift. We prove for discrete data the convergence of a recursive mean shift procedure to the nearest stationary point of the underlying density function and, thus, its utility in detecting the modes of the density. The relation of the mean shift procedure to the NadarayaWatson estimator from kernel regression and the robust M-estimators of location is also established. Algorithms for two low-level vision tasks, discontinuity preserving smoothing and image segmentation, are described as applications. In these algorithms, the only user set parameter is the resolution of the analysis and either gray level or color images are accepted as input. Extensive experimental results illustrate their excellent performance.},
   langid = {english},
-  file = {/Users/mavi/Zotero/storage/XFZPZVEW/PAMIMeanshift.pdf}
+  file = {/Users/mavi/Zotero/storage/XFZPZVEW/Comaniciu and Meer - 2002 - Mean shift a robust approach toward feature space.pdf}
 }
 
 @article{cooperClimateChangeinducedVariations2022,
@@ -1720,6 +1741,23 @@
   file = {/Users/mavi/Zotero/storage/EVJ7ZSNR/Kaya et al. - 2019 - Analysis of transfer learning for deep neural netw.pdf}
 }
 
+@online{kingmaAdamMethodStochastic2017,
+  title = {Adam: {{A Method}} for {{Stochastic Optimization}}},
+  shorttitle = {Adam},
+  author = {Kingma, Diederik P. and Ba, Jimmy},
+  date = {2017-01-29},
+  eprint = {1412.6980},
+  eprinttype = {arxiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.1412.6980},
+  url = {http://arxiv.org/abs/1412.6980},
+  urldate = {2023-12-13},
+  abstract = {We introduce Adam, an algorithm for first-order gradient-based optimization of stochastic objective functions, based on adaptive estimates of lower-order moments. The method is straightforward to implement, is computationally efficient, has little memory requirements, is invariant to diagonal rescaling of the gradients, and is well suited for problems that are large in terms of data and/or parameters. The method is also appropriate for non-stationary objectives and problems with very noisy and/or sparse gradients. The hyper-parameters have intuitive interpretations and typically require little tuning. Some connections to related algorithms, on which Adam was inspired, are discussed. We also analyze the theoretical convergence properties of the algorithm and provide a regret bound on the convergence rate that is comparable to the best known results under the online convex optimization framework. Empirical results demonstrate that Adam works well in practice and compares favorably to other stochastic optimization methods. Finally, we discuss AdaMax, a variant of Adam based on the infinity norm.},
+  pubstate = {preprint},
+  keywords = {Computer Science - Machine Learning},
+  file = {/Users/mavi/Zotero/storage/2WM3XEFJ/Kingma_Ba_2017_Adam.pdf;/Users/mavi/Zotero/storage/5ICPV3EX/1412.html}
+}
+
 @online{kingmaAutoEncodingVariationalBayes2022,
   title = {Auto-{{Encoding Variational Bayes}}},
   author = {Kingma, Diederik P. and Welling, Max},
@@ -2263,6 +2301,25 @@
   langid = {english},
   keywords = {read},
   file = {/Users/mavi/Zotero/storage/GWCP97RF/Li et al. - 2021 - Machine learning‐based automated fungal cell count.pdf}
+}
+
+@inproceedings{linMicrosoftCOCOCommon2014,
+  title = {Microsoft {{COCO}}: {{Common Objects}} in {{Context}}},
+  shorttitle = {Microsoft {{COCO}}},
+  booktitle = {Computer {{Vision}} – {{ECCV}} 2014},
+  author = {Lin, Tsung-Yi and Maire, Michael and Belongie, Serge and Hays, James and Perona, Pietro and Ramanan, Deva and Dollár, Piotr and Zitnick, C. Lawrence},
+  editor = {Fleet, David and Pajdla, Tomas and Schiele, Bernt and Tuytelaars, Tinne},
+  date = {2014},
+  series = {Lecture {{Notes}} in {{Computer Science}}},
+  pages = {740--755},
+  publisher = {{Springer International Publishing}},
+  location = {{Cham}},
+  doi = {10.1007/978-3-319-10602-1_48},
+  abstract = {We present a new dataset with the goal of advancing the state-of-the-art in object recognition by placing the question of object recognition in the context of the broader question of scene understanding. This is achieved by gathering images of complex everyday scenes containing common objects in their natural context. Objects are labeled using per-instance segmentations to aid in precise object localization. Our dataset contains photos of 91 objects types that would be easily recognizable by a 4 year old. With a total of 2.5 million labeled instances in 328k images, the creation of our dataset drew upon extensive crowd worker involvement via novel user interfaces for category detection, instance spotting and instance segmentation. We present a detailed statistical analysis of the dataset in comparison to PASCAL, ImageNet, and SUN. Finally, we provide baseline performance analysis for bounding box and segmentation detection results using a Deformable Parts Model.},
+  isbn = {978-3-319-10602-1},
+  langid = {english},
+  keywords = {Common Object,Object Category,Object Detection,Object Instance,Scene Understanding},
+  file = {/Users/mavi/Zotero/storage/43CED6AA/Lin et al_2014_Microsoft COCO.pdf}
 }
 
 @online{linMicrosoftCOCOCommon2015,
