--- a/p_viticola/article.tex
+++ b/p_viticola/article.tex
@@ -14,6 +14,7 @@
 \usepackage[pdftex,dvipsnames,table]{xcolor}
 \usepackage{bbold}
 \usepackage{diagbox}
+\usepackage{soul}
 
 \graphicspath{{./resources/images}}
 \addbibresource{../articles.bib}
@@ -30,7 +31,10 @@
 
 \section{Background}
 European grapevine (Vitis vinifera L.) is one of the most economically and widespread worldwide crop. Around 33 of the  10.000 varieties,  cover 50\% of the world's vineyard surface (OIV, 2017).
-Grapevine faces numerous pathogens and one of the most damaging diseases is downy mildew, caused by the oomycete Plasmopara viticola. This pathogen is endemic to the North America and was introduced into Europe around the 1870s  (Gessler et al., 2011), \parencite{fontaineEuropeBridgeheadWorldwide2021}). All the Vitis vinifiera varieties are susceptible to the pathogen and the current strategy to control the disease  relies on the massive applications of fungicides and which are potentially harmful for the humans and the environment. Long -lasting breeding programs have been conducted to introgress resistance from wild Vitis species into elite resistant varieties~\parencite{merdinogluBreedingDurableResistance2018}, \parencite{topferCoolClimatePerspective2022}. According to~\parencite{possamaiPhenotypingQTLIdentification2022}, more than 30 resistance genetic loci or Rpv (Resistance to Plasmopara viticola), have been already identified in grapevine and the majority of them confer a visual partial resistance defined by various levels of sporulation and  necrosis. The analysis of macroscopic phenotypes of the disease have been implemented by using several variables such as severity, incidence, spores count. Therefore, the use of the semi-quantitative OIV452-1~\parencite{OIVDescriptorList2009} scale was frequently used assessing both sporulation and necrosis.
+Grapevine faces numerous pathogens and one of the most damaging diseases is downy mildew, caused by the oomycete Plasmopara viticola. This pathogen is endemic to the North America and was introduced into Europe around the 1870s  (Gessler et al., 2011), \parencite{fontaineEuropeBridgeheadWorldwide2021}). All the Vitis vinifiera varieties are susceptible to the pathogen and the current strategy to control the disease  relies on the massive applications of fungicides and which are potentially harmful for the humans and the environment. Long -lasting breeding programs have been conducted to introgress resistance from wild \textit{Vitis} species into elite resistant varieties~\parencite{merdinogluBreedingDurableResistance2018}, \parencite{topferCoolClimatePerspective2022}. More than 30 resistance genetic loci or \textit{Rpv} (Resistance to \textit{Plasmopara viticola}), have been already identified in grapevine (Maul,2021).  Most of them confer a partial resistance defined by various levels of sporulation and typology of necrosis or cell death. All of the \textit{Rpv} have been detected by analysis of macroscopic phenotypes of the disease and have been implemented by using several variables such as severity, incidence, spores count. Therefore, the use of the semi-quantitative OIV452~\parencite{OIVDescriptorList2009} scale was frequently used for assessing both sporulation and necrosis~\parencite{possamaiPhenotypingQTLIdentification2022},  Some \textit{Rpv} encode  intracellular nucleotide-binding leucine rich repeat receptors (NLRs) to detect pathogen effectors,  and activate effector triggered immunity (ETI) ETI is a robust immune response usually
+accompanied by a form of programmed cell death known as the hypersensitive response or HR (Ngou et al., 2022).  One role of the HR is to limit the pathogen progression to the tissue region which is directly in contact with the pathogen (Balin-Kurti, 2019; Noman et al., 2020).  
+
+
 
 \section{Material and Method}
 
@@ -47,11 +51,11 @@ The proposed plant method includes four main items: (i) The imaging acquisition 
 The image system, as seen if Fig.~\ref{fig:vegoia}, consists of a copy stand and an RGB camera. The copy holds the camera at a specified height and has a Plexiglas with a hole on its base to allow constant framing, the lightning sources are used to remove any unwanted shadows from the images. Over the course of the years various cameras and lenses have bee used this causes the framing and exposure of the images to be inconsistent.
 
 \subsection{Dataset}
-Experiments to evaluate the resistance of various \textit{Vitis} species to various strains of \textit{P. viticola} have been performed in the VEGOIA platform at INRAE center Grand Est Colmar since 2012. On these experiments, leaf discs extracted from various \textit{Vitis} sub-species were infected with \textit{P. viticola}. Each leaf disc was scored with OIV 452-1 at 0 and 6 DPIs, some times also at 3,4 and 5 DPIs. Images of the plates containing the leaf discs were taken each time they were scored. Data regarding score, plate, position and image are kept in Excel files.
+Experiments to evaluate the resistance of various \textit{Vitis} species and genotypes to various strains of \textit{P. viticola} have been performed in the VEGOIA platform at INRAE center Grand Est Colmar since 2012. On these experiments, leaf discs extracted from various genotypes were infected with \textit{P. viticola}. Each leaf disc was scored with OIV 452-1 at 0 and 6 days post infection (dpi), some times also at 3, 4 and 5 dpi. Images of the plates containing the leaf discs were taken each time they were scored. Data regarding score, plate, position and image are kept in Excel files.
 All data for training was extracted from experiments having similar acquisition settings that happened between 2020 and 2022.
 
 \subsubsection{Leaf disc detection}
-The pre-processing dataset consists of 1932 plate images containing 22122 leaf discs sampled from the selected data. Ground truth was obtained with three steps: (i) 187 images were annotated with segmentation masks using the GiMP~\parencite{gimp}, these images were then used to train a segmentation model with ~\parencite{bergIlastikInteractiveMachine2019} used to create (iii) an object detection dataset.
+The pre-processing dataset consisted of 1932 plate images containing 22122 leaf discs sampled from the selected data. Ground truth was obtained with three steps: (i) 187 images were annotated with segmentation masks using the GiMP~\parencite{gimp}, these images were then used to train a segmentation model with ~\parencite{bergIlastikInteractiveMachine2019} used to create (iii) an object detection dataset.
 
 \subsubsection{Annotated leaf discs}
 \paragraph{}
@@ -149,8 +153,8 @@ The pre-processing dataset consists of 1932 plate images containing 22122 leaf d
     \end{subfigure}
     \caption{Examples of \textit{Vitis} leaf discs infected with \textit{Plasmopara viticola} showing the four different phenotypes selected.}
 \end{figure}
-A subset of 1881 images were scored with the presence or absence of four phenotypes which are sporulation Fig.~\ref{fig:sporulation}, flecks Fig.~\ref{fig:flecks}, dots Fig.~\ref{fig:dots} and senescence Fig.~\ref{fig:senescence}. We believe that these four characteristics are enough to describe most of the observed variability in the images.
-Due to the low frequency observed for some of the phenotypes we created the dataset by sampling the available leaf discs in ways that would yield the most images containing each phenotype. The detail of the sampling method can be seen in table~\ref{tab:binsample} As an example we sampled 210 images with low hue values in the HSV color space to get images with potential senescence. Eighty five images were discarded due to poor quality.
+\st{A subset of 1881 images were scored with the presence or absence of four phenotypes which are sporulation Fig.~\ref{fig:sporulation}, flecks Fig.~\ref{fig:flecks}, dots Fig.~\ref{fig:dots} and senescence Fig.~\ref{fig:senescence}. We believe that these four characteristics are enough to describe most of the observed variability in the images.}
+\st{Due to the low frequency observed for some of the phenotypes we created the dataset by sampling the available leaf discs in ways that would yield the most images containing each phenotype. The detail of the sampling method can be seen in table the supplementary material. As an example we sampled 210 images with low hue values in the HSV color space to get images with potential senescence. Eighty five images were discarded due to poor quality.}
 \begin{table}[H]
     \centering
     \caption{Distribution of annotations for binary phenotype detection.}
@@ -166,7 +170,7 @@ Due to the low frequency observed for some of the phenotypes we created the data
 Human annotation was performed by two experts. The results of the annotation can be seen in table~\ref{tab:databincount}.
 
 \subsubsection{FUNDUR dataset}
-A dataset of leaf discs scored with OIV 452-1 values using binocular magnifying glass from an experiment of the FUNDUR project were added to validate the model on never seen images.
+A dataset of leaf discs scored with OIV 452-1 values using binocular magnifying glass from a subset of experiments of the FUNDUR project were added to validate the model on never seen images. These experiments aim to describe the interaction between 14 genotypes of \textit{Vitis} containing containing or not resistance factors rpv1, rpv3.1 or rpv10. The dataset contains 153 leaf discs scored with OIV 4552-1 values at DPIs 3,4,5 and 6.
 
 \subsection{Pre-processing}
 
@@ -181,17 +185,27 @@ Since predictions are to be made on individual leaf discs they need to be extrac
 Object detection will be handled by a pre-trained Fast R-CNN~\parencite{girshickFastRCNN2015} model. Leaf indexation will be performed with an image processing pipeline. Finally to prevent the model from taking the background into account when making predictions we then extract the largest square inscribe in the leaf disc which represents around 78\% of the full leaf disc. Figure~\ref{fig:preprocessing} shows a workflow of the leaf disc patch extraction and indexation from plates, which includes the steps described here below
 
 \subsubsection{Leaf disc detection}
-We selected a Fast R-CNN model, from the PyTorch library~\parencite{falcon2019pytorch}, pre-trained on COCO V1. We selected a batch size of 20, the minimization was carried out using the ADAM optimizer with a learning rate of $7\times 10^{-5}$ with decay using StepLR with step size of 10 and a gamma of 0.8. Data augmentation was performed with the albumentations library to increase data variability by changing exposure and using a horizontal flip.
+We selected a Fast R-CNN model, from the PyTorch library~\parencite{falcon2019pytorch}, pre-trained on COCO V1~\parencite{linMicrosoftCOCOCommon2015}. We selected a batch size of 20, the minimization was carried out using the ADAM optimizer~\parencite{kingmaAdamMethodStochastic2017} with a learning rate of $7\times 10^{-5}$ with decay using StepLR with step size of 10 and a gamma of 0.8. Data augmentation was performed with the albumentations library~\parencite{buslaevAlbumentationsFastFlexible2020} to increase data variability by changing exposure and using a horizontal flip.
 
 \subsubsection{Leaf disc indexation}
 Bounding boxes predicted by the object detector model will be used to index the leaf discs. Variations in framing and quantity of leaf discs in the plates make it so a trivial approach will not work.
-In a first step leaf disc's row and column will be predicting with the centroid data from the bounding boxes applied to a mean shift for the columns and one for the rows. The varied positions of the plate combined to the possible absence of columns of leaf discs will cause the prediction the fail sometimes, this problem will only arise when less than ten leaf discs are present in a plate and the mean shift detects less than four columns. To address the first problem we used the Hough line detection~\parencite{dudaUseHoughTransformation1972} to detect the left border of the plate and crop the image to prevent the system for mistaken a plate aligned to the left with a missing first row. The second problem arises from the possibility of missing rows of leaf discs, to prevent this issue, when there are less than ten leaf discs detected, whenever there is enough space between two columns to fit 1.1 leaf discs, the next columns indexes are increased by one.
+In a first step leaf disc's row and column will be predicting with the centroid data from the bounding boxes applied to a mean shift~\parencite{comaniciuMeanShiftRobust2002a} for the columns and one for the rows. The varied positions of the plate combined to the possible absence of columns of leaf discs will cause the prediction the fail sometimes, this problem will only arise when less than ten leaf discs are present in a plate and the mean shift detects less than four columns. To address the first problem we used the Hough line detection~\parencite{dudaUseHoughTransformation1972} to detect the left border of the plate and crop the image to prevent the system for mistaken a plate aligned to the left with a missing first row. The second problem arises from the possibility of missing rows of leaf discs, to prevent this issue, when there are less than ten leaf discs detected, whenever there is enough space between two columns to fit 1.1 leaf discs, the next columns indexes are increased by one.
 
 \subsubsection{Patch extraction}
 In~\parencite{leeNewPerspectivesPlant2020} the authors show that deep learning models may take into account the image background when making predictions. To prevent this phenomena we decided to instead of the full leaf disc, just use the biggest square inscribed in the leaf disc which already represents around 78\% percent of the full surface.
 
+\subsection{Deep learning methods}
+The OIV 452-1 scale is a discrete scale with  an ordinality property. We tested different supervised strategies that benefit from this prior knowledge against the manually established ground truth.
 
+\subsubsection{Swin transformer with cross-entropy loss}
+As a naive baseline approach we used a Swin transformer~\parencite{liuSwinTransformerHierarchical2021} backbone, precisely we used Swin-T pretrained on ImageNet-1K, no ordinal prior was used with this model. Given a trainning set including K pairs of images x\textsubscript{i} and labels $\hat{y}\textsubscript{i}$, we trained the parameters $\theta$ of the network $f$ using stochastic gradient descent to minimize empirical risk
+\begin{equation}
+    \theta^*=arg~\min_{\theta} \sum_{i=1}^K\mathcal{L}(\hat{y_i}, f(x_{i}\theta))\label{fml:crossentropy}
+\end{equation}
+where $\mathcal{L}$ denotes the loss function, which was chosen as cross-entropy in our case. The minimisation was carried out using the ADAM optimizer with a learning rate of $1,6\times 10^{-4}$.
 
+\subsubsection{Swin transformer with CORN loss}
+The cross-entropy loss model is naive because it does not incorporate any prior knowledge of the ordinality of the OIV 452-1 scale. To improve the previous naive model, we substitute the cross-entropy loss with a rank-consistent ordinal regression framework (CORN)~\parencite{shiDeepNeuralNetworks2023}
 
 
 % Annotation a décrire dans le texte et parler des divergences et accords garder trace des désaccords et en parler lors de la discussion -> ML approaches can stabilise?
@@ -208,15 +222,6 @@ In~\parencite{leeNewPerspectivesPlant2020} the authors show that deep learning m
 % Fontes
 % Nom de colonnes
 
-
-
-
-
-
-
-\begin{equation}
-    L = -\sum_{c=1}^My_{o,c}\log(p_{o,c})\label{fml:crossentropy}
-\end{equation}
 
 \begin{figure}[H]
     \centering
@@ -240,7 +245,7 @@ In~\parencite{leeNewPerspectivesPlant2020} the authors show that deep learning m
 \section{Results and Discussion}
 
 \subsection{Leaf Disc Detection}
-\begin{table}
+\begin{table}[H]
     \centering
     \caption{Leaf disc detection models evaluation}
     \label{tab:leafdiscdetectionresult}
@@ -253,9 +258,6 @@ In~\parencite{leeNewPerspectivesPlant2020} the authors show that deep learning m
         \bottomrule
     \end{tabular}
 \end{table}
-
-
-
 
 \subsection{Binary Predictions}
 
@@ -319,48 +321,79 @@ Phenotypes legend:
 \end{table}
 
 
-\section{Never Seen Experiment}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.9\linewidth]{p_viticola//resources//images/cmp_2023_oiv_evo.png}
-    \caption{Predicted OIV 452-1 versus annotated one when following pathogen evolution.}
-    \label{fig:newexpprog}
-\end{figure}
+\subsection{Validation on new data}
 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.9\linewidth]{p_viticola//resources//images/nexexppatcherror.png}
-    \caption{Leaf discs annotated with OIV 9 erroneously predicted as OIV 7.}
-    \label{fig:newexperror}
+    \includegraphics[width=0.9\linewidth]{p_viticola//resources//images/disease_progression_v4.png}
+    \caption{Enter Caption}
+    \label{fig:enter-label}
 \end{figure}
 
 
 \begin{table}[H]
     \centering
     \caption{ANOVA for annotated data.}
-    \label{tab:oivannova}
+    \label{tab:anovaanno}
     \begin{tabular}{lrrrr}
         \toprule
-        {}         & sum\_sq & df  & F     & PR(>F)   \\
+        {}                & sum sq     & df    & F         & PR(>F)       \\
         \midrule
-        C(rpvloci) & 716.93  & 8   & 37.01 & 2.66e-38 \\
-        Residual   & 600.45  & 248 & NaN   & NaN      \\
+        C(rpvloci)        & 371.231972 & 3.0   & 64.912234 & 1.994282e-26 \\
+        C(exp)            & 44.894938  & 2.0   & 11.775241 & 1.865764e-05 \\
+        C(exp):C(rpvloci) & 26.338605  & 6.0   & 2.302735  & 3.758780e-02 \\
+        Residual          & 268.792208 & 141.0 &           &              \\
         \bottomrule
     \end{tabular}
 \end{table}
 
 \begin{table}[H]
     \centering
-    \caption{ANOVA for predicted data}
-    \label{tab:poivannova}
+    \caption{ANOVA for data predicted with binary backbone data.}
+    \label{tab:anovaanno}
     \begin{tabular}{lrrrr}
         \toprule
-        {}         & sum\_sq & df  & F     & PR(>F)   \\
+        {}                & sum sq     & df    & F         & PR(>F)       \\
         \midrule
-        C(rpvloci) & 872.63  & 8   & 47.27 & 9.90e-46 \\
-        Residual   & 572.28  & 248 & NaN   & NaN      \\
+        C(rpvloci)        & 349.965655 & 3.0   & 95.205068 & 9.899183e-34 \\
+        C(exp)            & 51.965675  & 2.0   & 21.205205 & 8.882941e-09 \\
+        C(exp):C(rpvloci) & 16.967786  & 6.0   & 2.307968  & 3.718447e-02 \\
+        Residual          & 172.767965 & 141.0 &           &              \\
+        \bottomrule
+    \end{tabular}
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \caption{ANOVA for predicted with naive backbone data.}
+    \label{tab:anovaanno}
+    \begin{tabular}{lrrrr}
+        \toprule
+        {}                & sum sq     & df    & F          & PR(>F)       \\
+        \midrule
+        C(rpvloci)        & 435.641686 & 3.0   & 118.331018 & 2.490808e-38 \\
+        C(exp)            & 66.281695  & 2.0   & 27.005613  & 1.176914e-10 \\
+        C(exp):C(rpvloci) & 13.418454  & 6.0   & 1.822391   & 9.882385e-02 \\
+        Residual          & 173.032900 & 141.0 &            &              \\
+        \bottomrule
+    \end{tabular}
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \caption{Comparing Tuckey pairwise test for annotated (anno) and predicted (pred) data.}
+    \label{tab:tuckey}
+    \begin{tabular}{llllllll}
+        \toprule
+        RPV loci 1 & RPV loci 2 & meandiff anno & meandiff pred & p-adj anno & p-adj pred & reject anno & reject pred \\
+        \midrule
+                  & rpv1      & 2.7471        & 3.4137        & 0.0        & 0.0        & True        & True        \\
+                  & rpv10     & 3.936         & 4.357         & 0.0        & 0.0        & True        & True        \\
+                  & rpv3.1    & 3.7727        & 4.4906        & 0.0        & 0.0        & True        & True        \\
+        rpv1      & rpv10     & 1.1889        & 0.9433        & 0.004      & 0.0101     & True        & True        \\
+        rpv1      & rpv3.1    & 1.0256        & 1.0769        & 0.0166     & 0.0022     & True        & True        \\
+        rpv10     & rpv3.1    & -0.1633       & 0.1336        & 0.9646     & 0.97       & False       & False       \\
         \bottomrule
     \end{tabular}
 \end{table}
