Last commint before moving to new project

--- a/articles.bib
+++ b/articles.bib
@@ -981,6 +981,15 @@
   file = {/Users/mavi/Zotero/storage/W9VVD9VK/Evans et al. - 2022 - Ecosystem service delivery by urban agriculture an.pdf;/Users/mavi/Zotero/storage/V5ZJVBF6/S2212041622000018.html}
 }
 
+@article{falcon2019pytorch,
+  title = {{{PyTorch}} Lightning},
+  author = {Falcon et al., William},
+  date = {2019},
+  journaltitle = {GitHub. Note: https://github.com/PyTorchLightning/pytorch-lightning},
+  volume = {3},
+  keywords = {⛔ No DOI found}
+}
+
 @inproceedings{faregarnotPanopticSegmentationSatellite2021,
   title = {Panoptic {{Segmentation}} of {{Satellite Image Time Series}} with {{Convolutional Temporal Attention Networks}}},
   booktitle = {2021 {{IEEE}}/{{CVF International Conference}} on {{Computer Vision}} ({{ICCV}})},
@@ -1146,6 +1155,14 @@
   langid = {english},
   pmcid = {PMC9590503},
   keywords = {Biotic and abiotic stresses,Deep learning,Ground-based imaging,High throughput phenotyping,Machine learning,Unmanned aerial vehicle}
+}
+
+@software{gimp,
+  title = {{{GIMP}}},
+  author = {{The GIMP Development Team}},
+  date = {2019-06-12},
+  url = {https://www.gimp.org},
+  version = {2.10.12}
 }
 
 @online{girshickFastRCNN2015,
@@ -1475,6 +1492,21 @@
   file = {/Users/mavi/Zotero/storage/NSDKIPWH/Howard et al_2017_MobileNets.pdf;/Users/mavi/Zotero/storage/6AZXRSRR/1704.html}
 }
 
+@article{huangKnowledgeDistillationFacilitates2023,
+  title = {Knowledge {{Distillation Facilitates}} the {{Lightweight}} and {{Efficient Plant Diseases Detection Model}}},
+  author = {Huang, Qianding and Wu, Xingcai and Wang, Qi and Dong, Xinyu and Qin, Yongbin and Wu, Xue and Gao, Yangyang and Hao, Gefei},
+  date = {2023-06-28},
+  journaltitle = {Plant Phenomics},
+  volume = {5},
+  pages = {0062},
+  publisher = {{American Association for the Advancement of Science}},
+  doi = {10.34133/plantphenomics.0062},
+  url = {https://spj.science.org/doi/10.34133/plantphenomics.0062},
+  urldate = {2024-01-11},
+  abstract = {Plant disease diagnosis in time can inhibit the spread of the disease and prevent a large-scale drop in production, which benefits food production. Object detection-based plant disease diagnosis methods have attracted widespread attention due to their accuracy in classifying and locating diseases. However, existing methods are still limited to single crop disease diagnosis. More importantly, the existing model has a large number of parameters, which is not conducive to deploying it to agricultural mobile devices. Nonetheless, reducing the number of model parameters tends to cause a decrease in model accuracy. To solve these problems, we propose a plant disease detection method based on knowledge distillation to achieve a lightweight and efficient diagnosis of multiple diseases across multiple crops. In detail, we design 2 strategies to build 4 different lightweight models as student models: the YOLOR-Light-v1, YOLOR-Light-v2, Mobile-YOLOR-v1, and Mobile-YOLOR-v2 models, and adopt the YOLOR model as the teacher model. We develop a multistage knowledge distillation method to improve lightweight model performance, achieving 60.4\% mAP@~.5 in the PlantDoc dataset with small model parameters, outperforming existing methods. Overall, the multistage knowledge distillation technique can make the model lighter while maintaining high accuracy. Not only that, the technique can be extended to other tasks, such as image classification and image segmentation, to obtain automated plant disease diagnostic models with a wider range of lightweight applicability in smart agriculture. Our code is available at https://github.com/QDH/MSKD.},
+  file = {/Users/mavi/Zotero/storage/TLB4MF75/Huang et al_2023_Knowledge Distillation Facilitates the Lightweight and Efficient Plant Diseases.pdf}
+}
+
 @article{hutherARADEEPOPSISAutomatedWorkflow2020,
   title = {{{ARADEEPOPSIS}}, an {{Automated Workflow}} for {{Top-View Plant Phenomics}} Using {{Semantic Segmentation}} of {{Leaf States}}},
   author = {Hüther, Patrick and Schandry, Niklas and Jandrasits, Katharina and Bezrukov, Ilja and Becker, Claude},
@@ -1579,6 +1611,14 @@
   pubstate = {preprint},
   keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
   file = {/Users/mavi/Zotero/storage/TSFWYJYG/Jang et al. - 2017 - Categorical Reparameterization with Gumbel-Softmax.pdf;/Users/mavi/Zotero/storage/8KATY5Z7/1611.html}
+}
+
+@online{jhsmphenotyping,
+  title = {What Is Phenotyping and Why Is It Important?},
+  author = {family=Medicine, given=John Hopkins Schol, prefix=of, useprefix=false},
+  date = {2023},
+  url = {https://mcp.bs.jhmi.edu/what-is-phenotyping/},
+  urldate = {2023-05-05}
 }
 
 @article{jiangConvolutionalNeuralNetworks2020,
@@ -3246,6 +3286,15 @@
   file = {/Users/mavi/Zotero/storage/X3A4QHYV/Puppim de Oliveira and Ahmed - 2021 - Governance of urban agriculture in African cities.pdf;/Users/mavi/Zotero/storage/8UR7QR2A/S095965262101948X.html}
 }
 
+@book{python3,
+  title = {Python 3 Reference Manual},
+  author = {Van Rossum, Guido and Drake, Fred L.},
+  date = {2009},
+  publisher = {{CreateSpace}},
+  location = {{Scotts Valley, CA}},
+  isbn = {1-4414-1269-7}
+}
+
 @online{qianWeNeedFully2020,
   title = {Do {{We Need Fully Connected Output Layers}} in {{Convolutional Networks}}?},
   author = {Qian, Zhongchao and Hayes, Tyler L. and Kafle, Kushal and Kanan, Christopher},
@@ -4698,6 +4747,22 @@
   file = {/Users/mavi/Zotero/storage/HITTTAT9/Zhang et al_2022_Deep Learning Based Automatic Grape Downy Mildew Detection.pdf}
 }
 
+@online{zhangImprovingDeepRegression2023,
+  title = {Improving {{Deep Regression}} with {{Ordinal Entropy}}},
+  author = {Zhang, Shihao and Yang, Linlin and Mi, Michael Bi and Zheng, Xiaoxu and Yao, Angela},
+  date = {2023-02-28},
+  eprint = {2301.08915},
+  eprinttype = {arxiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2301.08915},
+  url = {http://arxiv.org/abs/2301.08915},
+  urldate = {2023-12-13},
+  abstract = {In computer vision, it is often observed that formulating regression problems as a classification task often yields better performance. We investigate this curious phenomenon and provide a derivation to show that classification, with the cross-entropy loss, outperforms regression with a mean squared error loss in its ability to learn high-entropy feature representations. Based on the analysis, we propose an ordinal entropy loss to encourage higher-entropy feature spaces while maintaining ordinal relationships to improve the performance of regression tasks. Experiments on synthetic and real-world regression tasks demonstrate the importance and benefits of increasing entropy for regression.},
+  pubstate = {preprint},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning},
+  file = {/Users/mavi/Zotero/storage/VZHVUJD5/Zhang et al_2023_Improving Deep Regression with Ordinal Entropy.pdf;/Users/mavi/Zotero/storage/WVNNY3G5/2301.html}
+}
+
 @online{zhangLookaheadOptimizerSteps2019,
   title = {Lookahead {{Optimizer}}: k Steps Forward, 1 Step Back},
   shorttitle = {Lookahead {{Optimizer}}},
@@ -4875,6 +4940,14 @@
   isbn = {978-3-030-51934-6},
   keywords = {read},
   file = {/Users/mavi/Zotero/storage/VPDTI2F3/Zine el Abidine et al_2020_Machine Learning-Based Classification of Powdery Mildew Severity on Melon Leaves.pdf}
+}
+
+@online{zooniverse,
+  title = {Zooniverse},
+  author = {Alliance, Citizen Science},
+  date = {2023},
+  url = {https://www.zooniverse.org/},
+  urldate = {2023-05-05}
 }
 
 @article{zouFindingBestClassification2016,
